2011-05-19 0.9.8 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* add field fromopac to database to reliably spot records originating
		from the Opac
	* use lowercase 'lkl' search key instead of 'LKL' for Opac GOK records

2011-05-15 0.9.7 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Added TCA definition for the new Tag field

2011-05-05 0.9.6 Sven-S. Porst <porst@sub.uni-goettigen.de>
	* Change the query format in the search column of the data table from
		URL-escaped Pica Opac queries to non-escaped CCL-queries

2011-05-02 0.9.5 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* rename 'Convert history' scheduler task to 'Convert CSV'
	* store XML files in 'xml' subfolder of fileadmin/gok instead of 'lkl' subfolder
	* change data tree, so we can have other trees besides the main GOK tree (e.g. for
		special Neuerwerbungen or Guide subject lists
	* add backend configuration for hiding GOK-IDs in tree view
	* add 'tags' field from column 8 in CSV files

2011-03-30 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Add ID of containing Typo3 object to DOM IDs, so we can use several 
		GOK-displays on the same web page

2011-03-24 0.9 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Add loading of Opac data as a scheduler job
	* Add conversion of History CSV data as a scheduler job
	* Add a scheduler job to perform all data fetching/conversion/import in one go
	* improve documentation

2011-03-14 0.8 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* introduce two display styles (old vs. improved) for the tree
	* store all search queries _completely_ in the database
	* remove options for different query styles
	* simplify extension search setup: only provide a single URL
	* move CSS into separate files
	* remove superfluous dependency on nkwlib

2011-02-28 - 0.7 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* provide a display style using menus
	* download hit counts from Opac
	* display hit counts in tree style

2011-02-23 Sven-S. Porst <porst@sub.uni-goettingen.de>