@@ -30,7 +30,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => 'Göttingen State and University Library, Germany http://www.sub.uni-goettingen.de',
-	'version' => '0.9.8',
+	'version' => '0.9.9',
 	'constraints' => array(
 		'depends' => array(
 			't3jquery' => '1.8.15-0.0.0',
