@@ -1,4 +1,6 @@
-TCAdefaults.tx_nkwgok_downloadUrl {
-	geschichte = http://www.ssp.de/geschichte.csv
- 	anglistik = http://www.ssp.de/anglistik.csv
+plugin.tx_nkwgok_pi1{
+	downloadUrl {
+		allgemein = http://w3d.local/fileadmin/gok/csv/1-nel.csv
+ 		bibwiss = http://w3d.local/fileadmin/gok/csv/a-bibwiss.csv
+	}
 }
